# resonantdust_content

./: .gitignore  AGENTS.md  Cargo.toml  build.rs  compose.yml  gen-ids.py
blueprints/: id.json
blueprints/data/: 01.json
bootstrap/: bootstrap.json
cards/: AGENTS.md  aspects.json  flags.json  id.json  objects.json  traits.json  types.json
cards/data/: 01.json  02.json  03.json  04.json
cards/disciplines/: general.json
data/: CONVENTIONS.txt  SYNTAX.txt
data/aspect/: 01.rd
data/asset/: 01.rd
data/biomes/: 01.rd
data/blueprints/: 01.rd
data/cards/: blueprints.rd  faculties.rd  requisites.rd  souls.rd  status.rd  tiles.rd
data/functions/: 01.rd
data/manifest/: alter.rd  berry.rd  blueprint.rd  building.rd  concrete.rd  conifer.rd  flora.rd  flower.rd  mushroom.rd  requisite.rd  soul_blue.rd  stone.rd  symbols.rd  table_slab.rd
data/recipes/: 01.rd  02.rd  03_chorus_story.rd
locales/aspects/: en.json
locales/cards/: en.json
locales/panels/: en.json
panels/: defaults.json
pkg/: resonantdust_content.d.ts  resonantdust_content.js  resonantdust_content_bg.wasm  resonantdust_content_bg.wasm.d.ts
player_blueprints/: id.json
recipes/: AGENTS.md  aliases.json  flags.json  id.json  types.json
src/: biome_core.rs  blueprint_core.rs  card_model.rs  definition_core.rs  flags_core.rs  lib.rs  locales_core.rs  packed.rs  recipe_aliases.rs  recipe_core.rs  recipe_plan.rs  recipe_statement.rs  recipe_tape.rs  recipe_validate.rs  starter_pack_core.rs  texture_core.rs  wasm_api.rs
starter_packs/: id.json
textures/: id.json
zones/: biomes.json
(+38 files in other folders)
